--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,13 +1,13 @@
 ﻿{
   "topics": [
     {
-      "name": "kickboxtopicdev",
-      "httpsPort": 5112,
+      "name": "mytopic1",
+      "httpsPort": 6101,
       "Key": "TheLocal+DevelopmentKey=",
       "subscriptions": [
         {
           "name": "FunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToActivityFeedDb"
+          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
         }
       ]
     }
