* Added postman test

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -3,8 +3,8 @@
     {
       "name": "mytopic1",
       "httpsPort": 60101,
-      "Key": "TheLocal+DevelopmentKey=",
-      "subscriptions": [
+      "key": "TheLocal+DevelopmentKey=",
+      "subscribers": [
         {
           "name": "FunctionSubscription",
           "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
