Rewritten to use kestrel.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,4 +1,12 @@
-﻿{
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "topics": [
     {
       "name": "mytopic1",
