Use built in logging rather than serilog.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,16 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Warning",
-      "Microsoft": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "topics": [
     {
       "name": "mytopic1",
-      "httpsPort": 60101,
+      "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
       "subscribers": [
         {
