* Update readme. * Validate settings at startup.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,12 +1,12 @@
 {
   "topics": [
     {
-      "name": "mytopic1",
+      "name": "MyAwesomeTopic",
       "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
       "subscribers": [
         {
-          "name": "FunctionSubscription",
+          "name": "LocalAzureFunctionSubscription",
           "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
         }
       ]
