Update appsettings to include a topic with no subscribers.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -10,6 +10,12 @@
           "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
         }
       ]
+    },
+    {
+      "name": "ATopicWithNoSubscribers",
+      "port": 60102,
+      "key": "TheLocal+DevelopmentKey=",
+      "subscribers": []
     }
   ]
 }
