--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -7,6 +7,7 @@
       "subscribers": [
         {
           "name": "LocalAzureFunctionSubscription",
+          "eventTypes": null,
           "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
         }
       ]
