Updated example configuration to show how simple filtering would be configured

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -7,7 +7,15 @@
       "subscribers": [
         {
           "name": "LocalAzureFunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
+          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb",
+          "filter": {
+            "includedEventTypes": [
+              "some.special.event.type"
+            ],
+            "subjectBeginsWith": "MySubject",
+            "subjectEndsWith": "_success",
+            "isSubjectCaseSensitive": true
+          }
         }
       ]
     },
