Hooked up the rest of the tests to ensure advanced configuration is working as expected

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -14,7 +14,19 @@
             ],
             "subjectBeginsWith": "MySubject",
             "subjectEndsWith": "_success",
-            "isSubjectCaseSensitive": true
+            "isSubjectCaseSensitive": true,
+            "advancedFilters": [
+              {
+                "operatorType": "NumberGreaterThanOrEquals",
+                "key": "Data.Key1",
+                "value": 5
+              },
+              {
+                "operatorType": "StringContains",
+                "key": "Subject",
+                "values": [ "container1", "container2" ]
+              }
+            ]
           }
         }
       ]
