Moved the configuration example from the app.config file to the readme and added a few words to help in configuring filtering correctly

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -7,27 +7,7 @@
       "subscribers": [
         {
           "name": "LocalAzureFunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb",
-          "filter": {
-            "includedEventTypes": [
-              "some.special.event.type"
-            ],
-            "subjectBeginsWith": "MySubject",
-            "subjectEndsWith": "_success",
-            "isSubjectCaseSensitive": true,
-            "advancedFilters": [
-              {
-                "operatorType": "NumberGreaterThanOrEquals",
-                "key": "Data.Key1",
-                "value": 5
-              },
-              {
-                "operatorType": "StringContains",
-                "key": "Subject",
-                "values": [ "container1", "container2" ]
-              }
-            ]
-          }
+          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=PersistEventToDb"
         }
       ]
     },
