Fix up my broken change to SubscriptionSettings.cs.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -14,8 +14,7 @@
     {
       "name": "ATopicWithNoSubscribers",
       "port": 60102,
-      "key": "TheLocal+DevelopmentKey=",
-      "subscribers": []
+      "key": "TheLocal+DevelopmentKey="
     }
   ]
 }
