--- a/src/AzureEventGridSimulator/Properties/launchSettings.json
+++ b/src/AzureEventGridSimulator/Properties/launchSettings.json
@@ -7,7 +7,10 @@
   },
   "profiles": {
     "AzureEventGridSimulator": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
