- Add DisableValidation subscriber settings to disable validation at startup. - Updated README.

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -7,7 +7,8 @@
       "subscribers": [
         {
           "name": "LocalAzureFunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=ExampleFunction"
+          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=ExampleFunction",
+          "disableValidation": true
         }
       ]
     },
