- Remove base controller - Replaced SubscriptionValidationService with a Command and Handler - Updated README - Logging tweaks

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,35 +1,12 @@
 {
   "topics": [
     {
-      "name": "MyAwesomeTopic",
-      "port": 60101,
-      "key": "TheLocal+DevelopmentKey=",
-      "subscribers": [
-        {
-          "name": "LocalAzureFunctionSubscription",
-          "endpoint": "http://localhost:7071/runtime/webhooks/EventGrid?functionName=ExampleFunction",
-          "disableValidation": true
-        }
-      ]
-    },
-    {
       "name": "ATopicWithNoSubscribers",
       "port": 60102,
-      "key": "TheLocal+DevelopmentKey="
+      "key": "TheLocal+DevelopmentKey=",
+      "subscribers": [
+        // There are no subscribers defined yet, so you can send events to this topic but they won't be delivered to anyone
+      ]
     }
-  ],
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Error",
-        "System": "Error"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      }
-    ]
-  }
+  ]
 }
