--- a/src/AzureEventGridSimulator/example.appsettings.json
+++ b/src/AzureEventGridSimulator/example.appsettings.json
@@ -2,19 +2,6 @@
   "topics": [
 
     {
-      "name": "SupplyChain-DEV",
-      "port": 60111,
-      "key": "TheLocal+DevelopmentKey=",
-      "disabled": true, // this topic is disabled it's endpoint won't be created at startup
-      "subscribers": [
-        {
-          "name": "LocalWebApiSubscription",
-          "endpoint": "https://localhost:5050/api/SomeApi"
-        }
-      ]
-    },
-
-    {
       "name": "MyAwesomeTopic",
       "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
@@ -35,7 +22,21 @@
       "subscribers": [
         // There are no subscribers defined yet, so you can send events to this topic but they won't be delivered to anyone
       ]
+    },
+
+    {
+      "name": "ADisabledTopic",
+      "port": 60103,
+      "key": "TheLocal+DevelopmentKey=",
+      "disabled": true, // this topic is disabled so it's endpoint won't be created at startup
+      "subscribers": [
+        {
+          "name": "LocalWebApiSubscription",
+          "endpoint": "https://localhost:5050/api/SomeApi"
+        }
+      ]
     }
+
   ],
   "Serilog": {
     "MinimumLevel": {
