Update the appsettings

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -1,11 +1,15 @@
 {
   "topics": [
     {
-      "name": "ATopicWithNoSubscribers",
-      "port": 60102,
+      "name": "ATopicWithATestSubscriber",
+      "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
       "subscribers": [
-        // There are no subscribers defined yet, so you can send events to this topic but they won't be delivered to anyone
+        {
+          "name": "RequestCatcherSubscription",
+          "endpoint": "https://azureeventgridsimulator.requestcatcher.com",
+          "disableValidation": true
+        }
       ]
     }
   ]
