--- a/src/AzureEventGridSimulator/example.appsettings.json
+++ b/src/AzureEventGridSimulator/example.appsettings.json
@@ -55,8 +55,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Error",
-        "System": "Error"
+        "Microsoft": "Warning",
+        "System": "Warning"
       }
     },
     "WriteTo": [
