Refactoring + fix serilog net50 bug

--- a/src/AzureEventGridSimulator/appsettings.json
+++ b/src/AzureEventGridSimulator/appsettings.json
@@ -7,7 +7,7 @@
       "subscribers": [
         {
           "name": "RequestCatcherSubscription",
-          "endpoint": "https://azureeventgridsimulator.requestcatcher.com",
+          "endpoint": "https://azureeventgridsimulator.requestcatcher.com/",
           "disableValidation": true
         }
       ]
