Migrate to .net 5.0 (#23)
* Target .net 5.0
* Added auth header validation
* Added request catcher example
* Some cleanup in preparation for more unit tests
* Use asp.net ApiVersion handling instead of manual checking
* Added support for basic integration tests
* Add a warning about serilog config when required 'using' section is missing
* Upgrade Azure.Messaging.EventGrid library to 4.1.0

--- a/src/AzureEventGridSimulator/example.appsettings.json
+++ b/src/AzureEventGridSimulator/example.appsettings.json
@@ -5,7 +5,6 @@
       "name": "MyAwesomeTopic",
       "port": 60101,
       "key": "TheLocal+DevelopmentKey=",
-      "disabled": false,
       "subscribers": [
         {
           "name": "LocalAzureFunctionSubscription",
@@ -20,7 +19,7 @@
       "port": 60102,
       "key": "TheLocal+DevelopmentKey=",
       "subscribers": [
-        // There are no subscribers defined yet, so you can send events to this topic but they won't be delivered to anyone
+        
       ]
     },
 
@@ -28,24 +27,42 @@
       "name": "ADisabledTopic",
       "port": 60103,
       "key": "TheLocal+DevelopmentKey=",
-      "disabled": true, // this topic is disabled so it's endpoint won't be created at startup
+      "disabled": true, 
       "subscribers": [
         {
           "name": "LocalWebApiSubscription",
           "endpoint": "https://localhost:5050/api/SomeApi"
         }
       ]
-    }
+    },
 
+    {
+      "name": "RequestCatcherTopic",
+      "port": 60104,
+      "key": "TheLocal+DevelopmentKey=",
+      "subscribers": [
+        {
+          "name": "RequestCatcherSubscription",
+          "endpoint": "https://azureeventgridsimulator.requestcatcher.com",
+          "disableValidation": true
+        }
+      ]
+    }
+    
   ],
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Error",
-        "System": "Error"
+        "Microsoft": "Warning",
+        "System": "Warning"
       }
     },
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Seq"
+    ],
     "WriteTo": [
       { "Name": "Console" },
       {
