--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: ci
-# Continuous integration action which will fire on any push to any branch.
+# Continuous integration action which will fire on any push to a branch that is part of a pull request.
 
 on:
   pull_request:
@@ -15,7 +15,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [
+            # macos-latest,
+            # ubuntu-latest,
+            windows-latest,
+          ]
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -31,8 +35,28 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: build
-        run: dotnet build
+      # - name: build
+      #   run: dotnet build
+      #     --configuration ${{ env.CONFIGURATION }}
+      #     --no-incremental
+      #     --nologo
+      #     /p:WarningLevel=4
+      #     /p:TreatWarningsAsErrors=true
+      #     /p:NoWarn=""
+      #     /p:WarningsAsErrors=""
+      #     ${{ env.SOLUTION_PATH }}
+
+      # - name: test
+      #   run: dotnet test
+      #     --configuration ${{ env.CONFIGURATION }}
+      #     --no-restore
+      #     --no-build
+      #     --nologo
+      #     --filter "Category=unit|Category=integration"
+      #     ${{ env.SOLUTION_PATH }}
+
+      - name: test
+        run: dotnet test
           --configuration ${{ env.CONFIGURATION }}
           --no-incremental
           --nologo
@@ -40,13 +64,5 @@ jobs:
           /p:TreatWarningsAsErrors=true
           /p:NoWarn=""
           /p:WarningsAsErrors=""
-          ${{ env.SOLUTION_PATH }}
-
-      - name: test
-        run: dotnet test
-          --configuration ${{ env.CONFIGURATION }}
-          --no-restore
-          --no-build
-          --nologo
           --filter "Category=unit|Category=integration"
           ${{ env.SOLUTION_PATH }}
