--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,8 @@ jobs:
         run: dotnet test
           --configuration ${{ env.CONFIGURATION }}
           --nologo
+          --runtime linux-x64
+          --framework  net5.0
           /p:BuildNumber=${{ env.BUILD_NUMBER }}
           /p:Version=${{ env.BUILD_NUMBER }}
           /p:WarningLevel=4
@@ -47,36 +49,35 @@ jobs:
           --filter "Category=unit|Category=integration"
           ${{ env.PROJECT_PATH }}
 
-      - name: publish
-        run: dotnet publish
-          --configuration ${{ env.CONFIGURATION }}
-          --no-restore
-          --nologo
-          --runtime linux-x64
-          --framework  net5.0
-          --self-contained true
-          /p:BuildNumber=${{ env.BUILD_NUMBER }}
-          /p:Version=${{ env.BUILD_NUMBER }}
-          /p:PublishReadyToRun=false
-          /p:IncludeNativeLibrariesForSelfExtract=true
-          /p:PublishSingleFile=true
-          /p:PublishTrimmed=true
-          /p:TrimUnusedDependencies=true
-          --output ${{ env.ARITFACT_PATH }}
-          ${{ env.PROJECT_PATH }}
+      # - name: publish
+      #   run: dotnet publish
+      #     --configuration ${{ env.CONFIGURATION }}
+      #     --nologo
+      #     --runtime linux-x64
+      #     --framework  net5.0
+      #     --self-contained true
+      #     /p:BuildNumber=${{ env.BUILD_NUMBER }}
+      #     /p:Version=${{ env.BUILD_NUMBER }}
+      #     /p:PublishReadyToRun=false
+      #     /p:IncludeNativeLibrariesForSelfExtract=true
+      #     /p:PublishSingleFile=true
+      #     /p:PublishTrimmed=true
+      #     /p:TrimUnusedDependencies=true
+      #     --output ${{ env.ARITFACT_PATH }}
+      #     ${{ env.PROJECT_PATH }}
 
-      - name: upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifacts
-          path: ${{ env.ARITFACT_PATH }}/*
+      # - name: upload artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: artifacts
+      #     path: ${{ env.ARITFACT_PATH }}/*
 
-      - name: upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.ARITFACT_PATH }}/
-          asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
-          asset_content_type: application/octet-stream
+      # - name: upload release asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ github.event.release.upload_url }}
+      #     asset_path: ${{ env.ARITFACT_PATH }}/
+      #     asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
+      #     asset_content_type: application/octet-stream
