--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.ARITFACT_PATH }}/
+          asset_path: ${{ env.ARITFACT_PATH }}/${{ runner.os }}.zip
           asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
           asset_content_type: application/octet-stream
