--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,18 +66,30 @@ jobs:
           --output ${{ env.ARITFACT_PATH }}
           ${{ env.PROJECT_PATH }}
 
-      - name: upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ runner.os }}
-          path: ${{ env.ARITFACT_PATH }}/*
+      # - name: upload artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{ runner.os }}
+      #     path: ${{ env.ARITFACT_PATH }}/*
 
-      - name: upload release asset
-        uses: actions/upload-release-asset@v1
+      # - name: upload release asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ github.event.release.upload_url }}
+      #     asset_path: ${{ env.ARITFACT_PATH }}/${{ runner.os }}
+      #     asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
+      #     asset_content_type: application/octet-stream
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ${{ env.ARITFACT_PATH }}/*
+          name: ${{ github.event.release.name }}
+          body: ${{ github.event.release.body }}
+          prerelease: ${{ github.event.release.prerelease }}
+          draft: ${{ github.event.release.draft }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.ARITFACT_PATH }}/${{ runner.os }}
-          asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
-          asset_content_type: application/octet-stream
