--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+
+      include:
+        - os: macos-latest
+          runtime: osx-x64
+
+        - os: ubuntu-latest
+          runtime: linux-x64
+
+        - os: windows-latest
+          runtime: win-x64
+
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -36,25 +46,25 @@ jobs:
       - name: get the code
         uses: actions/checkout@v2
 
-      # - name: test
-      #   run: dotnet test
-      #     --configuration ${{ env.CONFIGURATION }}
-      #     --nologo
-      #     --runtime linux-x64
-      #     /p:BuildNumber=${{ env.BUILD_NUMBER }}
-      #     /p:Version=${{ env.BUILD_NUMBER }}
-      #     /p:WarningLevel=4
-      #     /p:TreatWarningsAsErrors=true
-      #     /p:NoWarn=""
-      #     /p:WarningsAsErrors=""
-      #     --filter "Category=unit|Category=integration"
-      #     ${{ env.PROJECT_PATH }}
+      - name: test
+        run: dotnet test
+          --configuration ${{ env.CONFIGURATION }}
+          --nologo
+          --runtime ${{ matirx.runtime }}
+          /p:BuildNumber=${{ env.BUILD_NUMBER }}
+          /p:Version=${{ env.BUILD_NUMBER }}
+          /p:WarningLevel=4
+          /p:TreatWarningsAsErrors=true
+          /p:NoWarn=""
+          /p:WarningsAsErrors=""
+          --filter "Category=unit|Category=integration"
+          ${{ env.PROJECT_PATH }}
 
       - name: publish
         run: dotnet publish
           --configuration ${{ env.CONFIGURATION }}
           --nologo
-          --runtime linux-x64
+          --runtime ${{ matirx.runtime }}
           --self-contained true
           /p:BuildNumber=${{ env.BUILD_NUMBER }}
           /p:Version=${{ env.BUILD_NUMBER }}
@@ -66,30 +76,16 @@ jobs:
           --output ${{ env.ARITFACT_PATH }}
           ${{ env.PROJECT_PATH }}
 
-      # - name: upload artifacts
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ${{ runner.os }}
-      #     path: ${{ env.ARITFACT_PATH }}/*
+      - name: zip-artifacts
+      - uses: papeloto/action-zip@v1
+        with:
+          files: ${{ env.ARITFACT_PATH }}/*
+          dest: ${{ runner.os }}.${{ env.BUILD_NUMBER }}.zip
 
-      # - name: upload release asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ github.event.release.upload_url }}
-      #     asset_path: ${{ env.ARITFACT_PATH }}/${{ runner.os }}
-      #     asset_name: ${{ runner.os }}.${{ env.BUILD_NUMBER }}
-      #     asset_content_type: application/octet-stream
-
-      - name: Release
+      - name: release-artifacts
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${{ env.ARITFACT_PATH }}/*
-          name: ${{ github.event.release.name }}
-          body: ${{ github.event.release.body }}
-          prerelease: ${{ github.event.release.prerelease }}
-          draft: ${{ github.event.release.draft }}
+          files: ${{ env.ARITFACT_PATH }}/${{ runner.os }}.${{ env.BUILD_NUMBER }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
