--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+        include:
+          - os: windows-latest
+            runtime: win-x64
 
-      include:
-        - os: macos-latest
-          runtime: osx-x64
+          - os: ubuntu-latest
+            runtime: linux-x64
 
-        - os: ubuntu-latest
-          runtime: linux-x64
-
-        - os: windows-latest
-          runtime: win-x64
+          - os: macos-latest
+            runtime: osx-x64
 
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -50,7 +50,7 @@ jobs:
         run: dotnet test
           --configuration ${{ env.CONFIGURATION }}
           --nologo
-          --runtime ${{ matirx.runtime }}
+          --runtime ${{ matrix.runtime }}
           /p:BuildNumber=${{ env.BUILD_NUMBER }}
           /p:Version=${{ env.BUILD_NUMBER }}
           /p:WarningLevel=4
@@ -64,7 +64,7 @@ jobs:
         run: dotnet publish
           --configuration ${{ env.CONFIGURATION }}
           --nologo
-          --runtime ${{ matirx.runtime }}
+          --runtime ${{ matrix.runtime }}
           --self-contained true
           /p:BuildNumber=${{ env.BUILD_NUMBER }}
           /p:Version=${{ env.BUILD_NUMBER }}
