--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,13 +22,10 @@ jobs:
         include:
           - os: windows-latest
             runtime: win-x64
-
           - os: ubuntu-latest
             runtime: linux-x64
-
           - os: macos-latest
             runtime: osx-x64
-
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -76,16 +73,16 @@ jobs:
           --output ${{ env.ARITFACT_PATH }}
           ${{ env.PROJECT_PATH }}
 
-      - name: zip-artifacts
-      - uses: papeloto/action-zip@v1
+      - name: zip artifacts
+        uses: papeloto/action-zip@v1
         with:
           files: ${{ env.ARITFACT_PATH }}/*
-          dest: ${{ runner.os }}.${{ env.BUILD_NUMBER }}.zip
+          dest: ${{ matrix.runtime }}.${{ env.BUILD_NUMBER }}.zip
 
-      - name: release-artifacts
+      - name: release artifacts
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${{ env.ARITFACT_PATH }}/${{ runner.os }}.${{ env.BUILD_NUMBER }}.zip
+          files: "${{ env.ARITFACT_PATH }}/${{ matrix.runtime }}.${{ env.BUILD_NUMBER }}.zip"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
