--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 
 on:
   release:
-    types: [published]
+    types: [published, edited]
 
 env:
   VERSION_NUMBER: ${{ github.event.release.tag_name }}
