separate clean,build,test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,30 @@ jobs:
       - name: get the code
         uses: actions/checkout@v2
 
-      - name: restore, build and test
-        run: dotnet test
+      - name: clean
+        run: dotnet clean
+          --configuration ${{ env.CONFIGURATION }}
+          --nologo
+          ${{ env.SOLUTION_PATH }}
+
+      - name: build
+        run: dotnet build
           --configuration ${{ env.CONFIGURATION }}
           --runtime ${{ matrix.runtime }}
+          --no-incremental
           --nologo
           /p:WarningLevel=4
           /p:TreatWarningsAsErrors=true
           /p:NoWarn=""
           /p:WarningsAsErrors=""
+          ${{ env.SOLUTION_PATH }}
+
+      - name: test
+        run: dotnet test
+          --configuration ${{ env.CONFIGURATION }}
+          --runtime ${{ matrix.runtime }}
+          --no-restore
+          --no-build
+          --nologo
           --filter "Category=unit|Category=integration"
           ${{ env.SOLUTION_PATH }}
