--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,14 @@ jobs:
           --nologo
           ${{ env.SOLUTION_PATH }}
 
+      - name: restore
+        run: dotnet restore
+          --configuration ${{ env.CONFIGURATION }}
+          --force
+          --runtime ${{ matrix.runtime }}
+          --nologo
+          ${{ env.SOLUTION_PATH }}
+
       - name: build
         run: dotnet build
           --configuration ${{ env.CONFIGURATION }}
